feat(ui): redesign complet de l'interface avec nouvelle palette de couleurs
- Changement du fond en bg-pink-50 pour une apparence plus douce
- Amélioration du header avec texte purple-900 et bouton redesigné
- Ajout de font-serif pour les titres avec message d'accueil élégant
- Refonte des cartes statistiques avec nouvelles icônes SVG
- Optimisation responsive pour mobile et desktop

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Track your expenses, manage your budget, and achieve financial goals with our easy-to-use budget tracker app. Free personal finance management tool.">
   <title>BaZtami</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="codes/style.css" />
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
@@ -185,10 +185,9 @@
     
 
       <!-- Chargement des modules JavaScript -->
-      <script src="../codes/js/app.js"></script>
-      <script src="../codes/js/storage.js"></script>
-      <script src="../codes/js/calculations.js"></script>
-      <script src="../codes/js/ui.js"></script>
+      <script src="codes/js/storage.js"></script>
+      <script src="codes/js/calculations.js"></script>
+      <script src="codes/js/ui.js"></script>
 </body>
 
-</html>
+</html>.
