Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="flex justify-between h-[15vh] w-full px-10 py-5 content-center items-center">
     <div class="flex items-center gap-4 w-1/4">
-      <img src="../assets/logo.png" alt="logo baztami" class="h-[10vh] p-2" />
+      <img src="assets/logo.png" alt="logo baztami" class="h-[10vh] p-2" />
       <p class="font-mono text-3xl text-purple-900">BaZtami</p>
     </div>
     <div class="">
