--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </div>
   </header>
 
-
+<video autoplay muted loop class="fixed top-0 left-0 w-full h-full object-cover opacity-10 -z-10">
+        <source src="assets/istockphoto-1352889698-640_adpp_is.mp4" type="video/mp4">
+    </video>
   <!-- POPUP FORMULAIRE (AJOUTÉ) -->
   <div id="popupOverlay" class="fixed inset-0 bg-black/90 flex items-center justify-center p-4 z-50 hidden">
     <div id="popupContainer" class="bg-white rounded-2xl shadow-2xl max-w-md w-full overflow-hidden">
